# Hackathon

./: .gitignore
.github/workflows/: main.yml
Credora/: .env.example  README.md  index.html  package-lock.json  package.json
Credora/scripts/: seed_demo.ts
Credora/src/: App.css  App.tsx  constants.ts  flowState.ts  networkConfig.ts  notarizationApi.ts
Credora/src/components/: AaGovernancePanel.tsx  AaProposalSigner.tsx  CredentialExplorer.tsx  CredentialMetadataCard.tsx  DomainPanel.tsx  FieldHelp.tsx  GettingStarted.tsx  HolderView.tsx  InfoHint.tsx  IssuerDashboard.tsx  IssuerPanel.tsx  LandingHero.tsx  OnboardingAdminPanel.tsx  PolicyAdminPanel.tsx  PresentationViewer.tsx  QrModal.tsx  StatusBadge.tsx  TxButton.tsx  VerifierHistory.tsx  VerifierPanel.tsx  WalletHeader.tsx
passapawn/: .env.example  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
passapawn/move/counter/: Move.toml
passapawn/scripts/: seed_demo.ts
passapawn/src/: App.css  App.tsx  constants.ts  flowState.ts  main.tsx  networkConfig.ts  notarizationApi.ts  vite-env.d.ts
passapawn/src/notarization-service/: .env.example  Cargo.toml  Dockerfile  RELEASE_CHECKLIST.md  ROLLBACK_PLAYBOOK.md  policy_governance.json  policy_schema.json  verify_v2_schema.json
passapawn/src/notarization-service/src/: client.rs  config.rs  did.rs  dto.rs  dynamic.rs  dynamic_impl.rs  error.rs  locked.rs  locked_impl.rs  main.rs  model.rs  onboarding_registry.rs  onboarding_store.json  policy_governance.rs  secrets.rs  trust_policy.json  trust_registry.rs  verify_impl.rs
(+45 files in other folders)
